# nba-rs

./: .gitignore  Cargo.toml  README.md  ad.json  build.rs.bck  nba-rs.code-workspace
.config/: nextest.toml
crates/nba-live/: Cargo.toml
crates/nba-live/src/: lib.rs  meta.rs
crates/nba-live/src/playbyplay/: clock.rs  game_id.rs  mod.rs  period_type.rs
crates/nba-live/src/serde/: meta_datetime.rs  mod.rs  string_u32.rs
crates/nba-live/tests/data/: playbyplay.json
crates/nba-macros/: Cargo.toml
crates/nba-macros/src/: lib.rs
crates/nba-stats/: Cargo.toml  a.rs
crates/nba-stats/examples/: endpoint_analyzer.rs  first_3pt_attempt_pct.rs  graph_ppg_vs_pts.rs
crates/nba-stats/src/: lib.rs
crates/nba-stats/src/endpoints/: alltimeleadersgrids.rs  assistleaders.rs  assisttracker.rs  leagueleaders.rs  mod.rs  playbyplayv2.rs  playergamelogs.rs
crates/nba-stats/src/endpoints/player/: mod.rs
crates/nba-stats/src/endpoints/player/clutch/: scoring.rs  usage.rs
crates/nba-stats/src/endpoints/player/general/: parameters.rs
crates/nba-stats/src/endpoints/player/index/: parameters.rs
crates/nba-stats/src/endpoints/team/: mod.rs
crates/nba-stats/src/endpoints/team/box_scores/: mod.rs  parameters.rs
crates/nba-stats/src/fields/: clutch_time.rs  draft_pick.rs  experience.rs  game_id.rs  half.rs  height.rs  last_n_games.rs  location.rs  measure_type.rs  mod.rs  month.rs  per_mode.rs  play_type.rs  player_or_team.rs  playoff_round.rs  position.rs  scope.rs  season.rs  season_type.rs  stat_category.rs  team.rs  type_grouping.rs  weight.rs
crates/nba-stats/src/response/: basic.rs
crates/nba-stats/src/serde/: mod.rs  one_or_many.rs  optional_infallible.rs  string_u32.rs  vec_or_single.rs
crates/nba-stats/src/serde_utils/: date.rs  mod.rs  one_or_many.rs
crates/nba-stats/src/stats/endpoint/: macros.rs  mod.rs
crates/nba-stats/src/stats/player/clutch/: parameters.rs  traditional.rs
crates/nba-stats/src/stats/player/general/: advanced.rs  misc.rs  mod.rs  scoring.rs  traditional.rs  usage.rs
crates/nba-stats/src/stats/player/general/opponent/: parameters.rs
crates/nba-stats/src/stats/player/index/: mod.rs
crates/nba-stats/src/stats/player/league_leaders/: mod.rs
crates/nba-stats/src/stats/player/playtype/: parameters.rs
crates/nba-stats/src/stats/response/: basic.rs  mod.rs
crates/nba-stats/src/stats/team/box_scores/league/: mod.rs  parameters.rs
examples/: all_play_by_play.rs  all_time_leaders.rs  alltimeleadersgrids.rs  analyzer.rs  assistleaders.rs  assisttracker.rs  csv_playoff_ts.rs  debug.rs  endpoint_analyzer.rs  graph_ppg_vs_pts.rs  main.rs  param_analyzer.rs  params.rs
nba-analysis/: Cargo.toml
nba-analysis/src/: analyzers.rs  consts.rs  lib.rs  main.rs
nba-analysis/src/analyzers/: params.rs  utils.rs
nba/src/: lib.rs
nba/src/endpoints/: mod.rs
nba/src/endpoints/playercareerstats/: datasets.rs
src/: fields.rs  lib.rs  macros.rs  main.rs  sd.rs  serde.rs  stats.rs
src/endpoints/: playercareerstats.rs
src/fields/: active_flag.rs  ahead_or_behind.rs  college.rs  conference.rs  country.rs  direction.rs  division.rs  draft_pick.rs  draft_year.rs  height.rs  last_n_games.rs  league_id.rs  location.rs  measure_type.rs  mod.rs  outcome.rs  player_or_team.rs  point_diff.rs  position.rs  quarter.rs  scope.rs  season.rs  season_segment.rs  season_type.rs  shot_clock_range.rs  sorter.rs  starter_or_bench.rs  stat_category.rs  team.rs  type_grouping.rs  yes_or_no.rs
src/live/: mod.rs
src/serde/: mod.rs  serde_optional_date.rs  serde_player_or_team_char.rs  serde_player_or_team_str.rs  serde_status_code.rs
src/stats/: alltimeleadersgrids.rs  assistleaders.rs  assisttracker.rs  endpoint.rs  mod.rs  parameters.rs  response.rs
src/stats/endpoint/: basic.rs  macros.rs  mod.rs
src/stats/endpoints/: mod.rs  playercareerstats.rs
src/stats/fields/: ahead_or_behind.rs  clutch_time.rs  conference.rs  country.rs  experience.rs  half.rs  league_id.rs  mod.rs  month.rs  per_mode.rs  play_type.rs  player_or_team.rs  playoff_round.rs  season.rs  season_segment.rs  season_type.rs  starter_or_bench.rs  weight.rs
src/stats/player/: mod.rs  official_leaders.rs
src/stats/player/clutch/: advanced.rs  misc.rs  mod.rs  parameters.rs  scoring.rs  traditional.rs  usage.rs
src/stats/player/general/: advanced.rs  defense.rs  misc.rs  mod.rs  parameters.rs  scoring.rs  traditional.rs  usage.rs
src/stats/player/general/estimated_advanced/: mod.rs  parameters.rs
src/stats/player/general/opponent/: mod.rs  parameters.rs
src/stats/player/index/: parameters.rs
src/stats/player/league_leaders/: mod.rs
src/stats/player/league_leaders/all_time/: mod.rs  parameters.rs
src/stats/player/league_leaders/season/: mod.rs  parameters.rs
src/stats/player/official_leaders/: fields.rs  mod.rs  parameters.rs
src/stats/player/playtype/: mod.rs  parameters.rs
src/stats/player/season_leaders/: mod.rs  parameters.rs
src/stats/response/: basic.rs  mod.rs
src/stats/team/box_scores/: parameters.rs
src/stats/team/box_scores/league/: mod.rs  parameters.rs
tests/: integration_test.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  debug.rs  main.rs
