[package]
name = "nba"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
once_cell = "1.17.1"
reqwest = { version = "0.11.16", features = ["json", "gzip", "cookies"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
serde_repr = "0.1.12"
thiserror = "1.0.40"
time = "0.3.20"

[dev-dependencies]
color-eyre = "0.6.2"
fncli = "0.3.4"
futures = "0.3.28"
heck = "0.4.1"
image = "0.24.6"
plotters = "0.3.4"
serde_test = "1.0.160"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["io-util"] }
