[workspace]
default-members = ["crates/*"]
members = ["crates/*"]
resolver = "2"

    [workspace.package]
    authors = ["Vidhan Bhatt <me@vidhan.io>"]
    edition = "2021"
    homepage = "https://github.com/vidhanio/nba-rs"
    license = "MIT"
    readme = "README.md"
    repository = "https://github.com/vidhanio/nba-rs"
    version = "0.1.0"

    [workspace.dependencies]
    nba-macros = { path = "crates/nba-macros" }

    async-trait = "0.1"
    claims = "0.7"
    http-serde = "1"
    once_cell = "1"
    reqwest = { version = "0.11", features = ["cookies", "gzip", "json"] }
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    serde_repr = "0.1"
    serde_test = "1"
    thiserror = "1"
    time = { version = "0.3", features = ["macros", "serde"] }
    tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
    tokio-stream = { version = "0.1", features = ["io-util"] }
