[package]
name = "nba-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
once_cell = "1.13.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json", "gzip"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["fs", "io-util"] }
nba = { version = "0.1.0", path = "../nba" }
