[package]
name = "xtask"

publish = false
version = "0.0.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
color-eyre = "0.6"
fncli = "0.3"
heck = "0.4"
http = "0.2"
nba-stats.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
tokio.workspace = true
