[package]
name = "xtask"

publish = false
version = "0.0.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
nba-stats.workspace = true

clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
heck = "0.4"
http = "1.0"
prettyplease = "0.2"
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
syn.workspace = true
tokio.workspace = true
