[package]
name = "nba-macros"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true


[dependencies]
darling = "0.20"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
