[package]
name = "nba-stats"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
nba-macros.workspace = true

async-trait.workspace = true
once_cell.workspace = true
reqwest.workspace = true
sealed = "0.5"
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
tokio.workspace = true
color-eyre = "0.6"
fncli = "0.3"
heck = "0.4"
