[package]
name = "nba-stats"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
nba-macros.workspace = true

async-trait.workspace = true
once_cell = "1"
reqwest.workspace = true
sealed = "0.5"
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
claims.workspace = true
tokio.workspace = true
